--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SASS Project</title>
-    <link rel="stylesheet" href="C:\Users\Ritambhar\Desktop\Top Secret project\Webpages\Pre-Processor Project\css\StyleSheet2.css">
+    <link rel="stylesheet" href="C:\css\StyleSheet2.css">
 </head>
 <body>
     <header>
