--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SASS Project</title>
-    <link rel="stylesheet" href="\css\StyleSheet2.css">
+    <link rel="stylesheet" href="StyleSheet2.css">
 </head>
 <body>
     <header>
